# weave

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  Analysis.ipynb  CLAUDE.md  CMakeLists.txt  LICENSE  LOG.md  README.md  RESEARCH.md  ROADMAP.md  circuit.py  classical.py  main.py  model.py  pyproject.toml  requirements.txt  util.py
.ipynb_checkpoints/: Analysis-checkpoint.ipynb
benchmarks/: README.md  __init__.py
benchmarks/fixtures/: README.md  bb72_reference.json
benchmarks/regression/: __init__.py  bb72.py
benchmarks/runners/: __init__.py  run_regression.py
examples/: Analysis.ipynb  Tutorial.ipynb  gui_tutorial.md
examples/canvases/: simple_demo.json  surface_code.json
tests/: test_core.py
weave/: __init__.py  __main__.py  codes.py  model.py  simulator.py
weave/_core/: __init__.py
weave/_core/include/: weave.hpp
weave/_core/include/bindings/: codes.pybind.hpp  hypergraph_product_code.pybind.hpp  noise_model.pybind.hpp  stabilizer_code.pybind.hpp  util.pybind.hpp
weave/_core/include/weave/: hypergraph_product_code.hpp  noise_model.hpp
weave/_core/include/weave/codes/: noise_model.hpp  stabilizer_code.hpp
weave/_core/include/weave/util/: graph.hpp  pcm.hpp
weave/_core/src/bindings/: codes.pybind.cpp  util.pybind.cpp  weave.pybind.cpp
weave/_core/src/codes/: hypergraph_product_code.cpp  noise_model.cpp  stabilizer_code.cpp
weave/_core/src/util/: graph.cpp  pcm.cpp
weave/analysis/: __init__.py  pauli.py  propagation.py  residual.py  validation.py
weave/codes/: __init__.py  base.py  code.py  css_code.py  hypergraph_product_code.py  model.py
weave/codes/bb/: __init__.py  algebra.py  bb_code.py  schedule.py
weave/compiler/: __init__.py  circuit_emit.py  compile.py  geometry_pass.py
weave/geometry/: __init__.py  distance.py  kernels.py  pair.py
weave/gui/: __init__.py  canvas.py  code_bridge.py  code_editor_canvas.py  code_templates.py  components.py  drawing.py  editor.py  graph_model.py  help_dialog.py  input_handler.py  main_editor_window.py  menus.py  simulation.py  theme.py  windows.py
weave/ir/: __init__.py  compiled.py  decoder_artifact.py  embedding.py  kernel.py  metrics.py  noise.py  route.py  route_metric.py  schedule.py
weave/ir/embeddings/: __init__.py  biplanar.py  column.py  fixed_permutation.py  json_polyline.py  straight_line.py  surface.py
weave/ir/importers/: __init__.py  from_json.py  from_stim_circuit.py
weave/optimize/: __init__.py  objectives.py  swap_descent.py
weave/surface/: __init__.py  base.py  torus.py
weave/tests/: conftest.py  test_analysis_pauli.py  test_analysis_propagation.py  test_analysis_residual.py  test_analysis_validation.py  test_bb_code.py  test_bb_embeddings.py  test_canvas_bridge.py  test_code_bridge.py  test_compiler_geometry.py  test_compiler_local.py  test_css_code.py  test_decoder_adapters.py  test_geometry.py  test_graph_model.py  test_hgp_compile.py  test_hypergraph_product_code.py  test_importers.py  test_ir_compiled.py  test_ir_decoder_artifact.py  test_ir_embedding.py  test_ir_kernel.py  test_ir_metrics.py  test_ir_noise.py  test_ir_route.py  test_ir_route_metric.py  test_ir_schedule.py  test_noise_model.py  test_optimize.py  test_pcm.py  test_reference_codes.py  test_regression_bb72.py  test_surface_embedding.py
weave/util/: __init__.py  graph.py  pcm.py
