[project]
name = "weave"
version = "0.3.0-alpha"
description = "A quantum error correction framework that can implement and visualize qubit cross-talk."
authors = [
    { name = "angelo", email = "angelo.dibella2020@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "numpy >=2.0.0",
    "matplotlib >=3.9.2",
    "sinter >=1.14.0",
    "stimbposd >=0.0.1",
    "stim >=1.14.0",
    "sympy >=1.13.3",
    "networkx >=3.4.2",
    "notebook >=7.2.2",
    "pyside6 >=6.8",
]

[project.optional-dependencies]
test = ["pytest >=8.3.4"]

[project.scripts]
wv = "weave.gui.editor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
